Add English Version docs

--- a/looklog/i18n/en/docusaurus-plugin-content-docs/current/docs/开发的心路历程.md
+++ b/looklog/i18n/en/docusaurus-plugin-content-docs/current/docs/开发的心路历程.md
@@ -1,57 +1,55 @@
-最近总能在小红书上刷到“长期主义穿搭”类帖子，好像不配上长期主义的标题或者标签这帖子就发不了了。一开始我觉得蛮符合直觉的，好的、贵的，总会用得久一些。但是果真如此吗？张姐去年斥巨资买了件3000多的羽绒服，我说这么舍得？她说没事，我穿十年，今年：
+Recently, I keep seeing posts about "long-termist outfits" on Xiaohongshu. It seems that if a post doesn't have the title or tag of long-termism, it can't be published. At first, I thought it made sense; good and expensive items are always used longer. But is that really the case? Last year, Sister Zhang spent over 3000 on a down jacket, and I asked her if she was really willing to spend that much. She said it was fine; she would wear it for ten years. This year:
 
 ![image-20241124162334051](https://pub-8dffc52979c34362aa2dbe3a43f0792a.r2.dev/image-20241124162334051.png)
 
-而我的衣柜呢？也好不到哪里去，有买回来连吊牌都没摘的裙子，放了两年，前段时间践行断舍离给扔了。有买的时候觉得还凑合的鞋，懒得逛了就它吧，结果就穿了1次，最后挂闲鱼也没人要。每天打开鼓鼓囊囊的衣柜，却还是在发愁今天到底该穿什么。
+And what about my wardrobe? It's not much better. I have skirts that I bought but never took the tags off, which I threw away during a recent decluttering session after two years. I bought shoes that seemed okay at the time, but I was too lazy to shop around, and I ended up wearing them just once. In the end, I couldn't even sell them on Xianyu. Every day, I open my bulging wardrobe but still struggle with what to wear.
 
-选择太多，就等于没有选择。
+Having too many choices is equivalent to having no choice at all.
 
-因为拥有得太多，反而对自己应该穿什么、买什么一头雾水。而人只有在匮乏时，才会明白自己真正需要的是什么。
+Because I own too much, I am confused about what I should wear and buy. Only when one is in scarcity can they truly understand what they really need.
 
-于是我开始了断舍离。
+So, I started decluttering.
 
-* 出：扔掉凑合的衣服
+* Out: Throw away the mediocre clothes
 
-  * 在扔衣服的过程中，最让人头疼的就是那些凑合能穿的衣服。如果一件衣服一点都不合适的话，就能毫不犹豫地舍弃，可如果它凑合能穿，舍弃的难度便会陡然加大。如果那件衣服恰巧还很贵，那就是难上加难。
-  * 穿着凑合能穿的衣服会感到内心雀跃吗，会对这一天的自己充满自信吗？一直穿一些凑合的衣服，无法发现其他更适合自己的衣服。那我们为什么要这样做，这到底有什么意义呢？明明我们人生的每一天都如此珍贵！
+  * The most frustrating part of decluttering is dealing with those clothes that are just "okay" to wear. If a piece of clothing doesn't fit at all, it's easy to discard it. But if it’s just passable, the difficulty of letting go increases dramatically. If that piece of clothing happens to be expensive, it becomes even harder.
+  * Does wearing mediocre clothes make one feel excited inside? Does it fill one with confidence for the day? Continuously wearing just okay clothes prevents us from discovering other items that might suit us better. So why do we do this? What is the point? Every day of our lives is so precious!
 
-  * 更重要的是，这些衣服无法带给人“终于买到它了”的满足感和喜悦感，所以我们会很快就进入下一次的买买买。在“下一次可能会满意”的不确定的期待中，浪费了金钱，迷失了自我。反复进行没有自觉的购物，不论何时都无法得到切实的满足。
-  * 舍弃不用的物品并不可惜，最可惜的其实是将衣服买回家但不穿。当我们买下根本不会使用的物品时，相当于已经浪费了这部分金钱。所以，不论是将这件物品持有10年，还是买回来3天就丢掉，两者的浪费程度并没有什么区别。
+  * More importantly, these clothes do not provide the satisfaction and joy of "finally getting it," so we quickly move on to the next purchase. In the uncertain anticipation of "maybe the next one will satisfy," we waste money and lose ourselves. Engaging in mindless shopping repeatedly will never lead to genuine satisfaction.
+  * Discarding unused items is not regrettable; what’s truly regrettable is buying clothes that we never wear. When we purchase items that we will never use, we have effectively wasted that money. Therefore, whether we hold onto an item for ten years or throw it away three days after buying it, the level of waste is essentially the same.
 
-* 进：只买真正喜欢的衣服
-  * 钱财有限，所以更应该只买真正想要的东西。切身体验这份喜悦感，然后更加珍惜地去使用。只要体验过一次这样的幸福感，便会在不知不觉间忘记那些备选品了。
-  * 但什么是我真正喜欢的呢？小红书上关注的穿搭博主一长串，各个季节为我推送新品，看着真的很好看啊，这就是我喜欢的！但是买回来可能试穿后，又变成了凑合。
-  * 时尚博主设定的穿搭场景与现实中我们真正的生活场景、外出的目的地、乘坐的交通工具等，几乎完全不同。更为关键的是长相和身材也不一样啊。 所以，我们只能自己思考穿什么、怎么穿。
-  * 通过记录自己每天的穿搭，才会逐渐发现，哪些衣服是真正适合自己的，哪些只是为了凑合。
+* In: Only buy clothes that you truly like
+  * With limited finances, we should only buy what we genuinely want. Experience that joy and cherish using it more. Once you have felt that happiness, you will unconsciously forget about the alternatives.
+  * But what do I truly like? I follow a long list of fashion bloggers on Xiaohongshu, who push new products for each season. They look really good, and I think, "This is what I like!" But when I buy them, they often turn out to be just okay after trying them on.
+  * The outfit scenarios set by fashion bloggers are almost completely different from our real-life situations, destinations, and modes of transportation. More importantly, our appearances and body types are different too. So, we can only think for ourselves about what to wear and how to wear it.
+  * By recording my daily outfits, I gradually discover which clothes truly suit me and which are just for the sake of it.
 
-在这一出一进之间，我希望能看清自己真正适合的是什么。
+In this process of discarding and acquiring, I hope to see what truly suits me.
 
-这些思绪每天推动着我，促使我开发了LookLog。
+These thoughts drive me every day and prompted me to develop LookLog.
 
-我希望：
+I hope to:
 
-* 记录穿搭，找到适合自己的风格，而不是看博主怎么说、怎么穿。
+* Record outfits and find my own style, rather than just following what bloggers say or wear.
 
   ![IMG_013B63C9E97A-1](https://pub-8dffc52979c34362aa2dbe3a43f0792a.r2.dev/IMG_013B63C9E97A-1.jpeg)
 
-* 记录单品穿着次数，知道哪些是假便宜，哪些是真长期主义。
+* Track the number of times I wear each item to know which are false bargains and which are true long-term investments.
 
 ![image-20241124164954438](https://pub-8dffc52979c34362aa2dbe3a43f0792a.r2.dev/image-20241124164954438.png)
 
-（只穿了1次就觉得不好搭衣服挂闲鱼了的鞋，和虽然贵但真穿了两三年的马丁靴）
+(These shoes, which I wore only once and then decided to sell on Xianyu, and the expensive but well-worn Martin boots that I've had for two to three years)
 
-舍弃不再适合自己的衣服，并在每次购买衣服时深思熟虑。只要能坚持这么做，“适合自己的那件新衣服”的形象便会逐渐鲜明起来。长此以往，你的衣橱里就只剩下适合自己的衣服了，这样就能无限接近理想中的“零压力衣橱”！
+Discard clothes that no longer suit you and think carefully before each purchase. If you can stick to this, the image of "that new piece of clothing that suits you" will gradually become clearer. Over time, your wardrobe will only contain clothes that suit you, bringing you closer to the ideal "zero-pressure wardrobe"!
 
+I also tried to find existing apps to start recording, but I was too lazy. Most of the wardrobe apps I tried required logging in or had a bunch of parameters to fill out when entering clothes, which was very unfriendly for a lazy person. So, I decided to develop it myself. Initially, I had a more ideal vision of integrating Taobao's API to directly recognize uploaded clothes, so users wouldn't even have to fill in the price. However, this was a bit too difficult for someone with little development experience like me, and I didn't want to get stuck at the minimum viable product stage. Additionally, integrating third-party APIs would inevitably involve costs, and I didn't want to start paying before I had even added two items. So, I opted for a user manual input for prices. I also used a bit of AI for category recognition, just a little, about 40%, haha.
 
-我也尝试过直接找现成的App开始记录，但是我太懒了，在尝试过的衣橱App中，大部分上来就需要登录注册，或者在录入衣服时有一大堆参数需要填写，对P人太不友好了。于是我尝试自己开发，一开始我想得更理想，接入淘宝的API，直接识别上传的衣服，用户连价钱都不用填，但是这对开发经验约等于无的我来说，难度有点点大，我不想在最小可行性产品阶段，就把自己给绊住。而且接入三方API必然会有价格问题，我也不想一上来还没添加两件衣服呢，就开始付费了。于是采用了用户手动输入价格的方式。品类的识别也用了一点点AI，微AI，AI得不多，40%吧哈哈哈哈哈。
+In short, LookLog can be used without logging in or registering, and all data is completely localized, so there are no privacy concerns.
 
-总之LookLog不需要登录注册即可使用，数据完全本地化，不用担心隐私问题。
+Adding clothes is also quite simple: input the image -> fill in the price -> save. The background automatically processes the cropping and category recognition with zero delay, and the iOS vision API is quite user-friendly.
 
-添加衣服也挺简单的，输入图片->填价格，然后保存就可以了。抠图和识别品类都是零延时，后台自动就操作了，iOS的vision API还挺好用的。
+![IMG_5A5C176EEFDB-1](https://pub-8dffc52979c34362aa2dbe3a43f0792a.r2.dev/image-20241124164954438.png)
 
-![IMG_5A5C176EEFDB-1](https://pub-8dffc52979c34362aa2dbe3a43f0792a.r2.dev/IMG_5A5C176EEFDB-1.jpeg)
+Through continuous recording, I hope everyone can find their 30 favorite pieces of clothing, each of which they will wear, love, and find very suitable for themselves.
 
-通过不断记录，我希望大家都能找到自己最爱的30件衣服，这些衣服，每一件都会穿，每一件也都很喜欢，而且每一件对自己而言都非常合适。
-
-
-我们每天都会做各种各样的选择，从物品到衣服，再到生活方式。我想，人生正是由这些接连不断的小小的选择组合而成 而LookLog希望成为你在这条觉知之路上的同行者，帮助你找到属于自己的"恰好"。
+Every day, we make various choices, from items to clothes to lifestyles. I believe that life is composed of these continuous small choices, and LookLog hopes to be your companion on this path of awareness, helping you find your own "just right."
