Add metadata and structure to the development journey documentation

--- a/looklog/i18n/en/docusaurus-plugin-content-docs/current/开发的心路历程.md
+++ b/looklog/i18n/en/docusaurus-plugin-content-docs/current/开发的心路历程.md
@@ -1,3 +1,12 @@
+---
+# Start of Selection
+sidebar_position: 2
+id: journey
+title: The Journey of Development
+sidebar_label: The Journey of Development
+sidebar_class_name: blue
+# End of Selection
+---
 Recently, I keep seeing posts about "long-termist outfits" on Xiaohongshu. It seems that if a post doesn't have the title or tag of long-termism, it can't be published. At first, I thought it made sense; good and expensive items are always used longer. But is that really the case? Last year, Sister Zhang spent over 3000 on a down jacket, and I asked her if she was really willing to spend that much. She said it was fine; she would wear it for ten years. This year:
 
 ![image-20241124162334051](https://pub-8dffc52979c34362aa2dbe3a43f0792a.r2.dev/image-20241124162334051.png)
